--- a/ProfessionalEvaluation.Website/Views/Home/Index.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">
-                    Nos ocupamos de tu talento humano para que te enfoques en tu negocio
+                    Nos ocupamos de tu talento humano para que te enfoques en tu negocio.
                 </div>
                 <!-- <div class="intro-heading">It's Nice To Meet You</div> -->
                 <!-- 
@@ -113,15 +113,17 @@
                         <i class="fa fa-user fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Contratación</h4>
-                    <p class="text-muted">Te ayudamos a evaluar tus candidatos y determinar si cumplen con tus necesidades.</p>
+                    <p class="text-muted">Aumenta la efectividad de tus procesos de selección, evaluamos técnicamente a tus candidatos en 2 días (*), obtienes un ranking y decides quien se ajusta a tus necesidades.
+                       <br />* Depende de la disponibilidad del candidato
+                    </p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Evaluación de capacidades internas</h4>
-                    <p class="text-muted">Medimos el nivel de conocimiento de tu personal, lo perfilamos y lo comparamos con tu industria para que conozcas tu situación.</p>
+                    <h4 class="service-heading">Diagnóstico</h4>
+                    <p class="text-muted">Evaluamos las habilidades de tu personal, lo perfilamos y lo comparamos con tu industria para que conozcas tu situación.</p>
                 </div>
                 
             </div>
@@ -134,7 +136,7 @@
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Capacitación</h4>
-                    <p class="text-muted">Cerramos tus brechas de conocimiento, convirtiendo a tus empleados en expertos temáticos.</p>
+                    <p class="text-muted">Cerramos tus brechas de conocimiento, le damos a tus empleados las herramientas necesarias para desempeñar de la mejor manera sus labores.</p>
                 </div>
 
                 <div class="col-md-6">
@@ -289,7 +291,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Te evaluamos a tus candidatos con los más altos estándares en conocimiento a nivel mundial, tendrás la certeza que estás contratando 
+                                        Evaluamos tus candidatos con los más altos estándares en conocimiento a nivel mundial, tendrás la certeza que estás contratando 
                                         acorde al Perfil que buscas.
                                     </p>
                                 </div>
@@ -305,7 +307,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Constantemente estamos actualizando nuestros conocimiento y evaluaciones para que nunca te quedes atrás.
+                                        Constantemente actualizamos nuestros conocimientos y mejoramos las evaluaciones para que nunca te quedes atrás.
                                     </p>
                                 </div>
                             </div>
@@ -349,15 +351,18 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Luz Bedoya</h4>
+                        <h4>Luz María Bedoya</h4>
                         <p class="text-muted">Creativa</p>
+                        <p class="text-muted"><i>Especialista en gerencia de la comunicación</i></p>
                         <ul class="list-inline social-buttons">
+                            <!-- 
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
+                                -->
                         </ul>
                     </div>
                 </div>
@@ -366,33 +371,39 @@
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Mauricio Bedoya</h4>
                         <p class="text-muted">Líder de Ingeniería</p>
+                        <p class="text-muted"><i>Especialista en innovación</i></p>
                         <!-- 
                         <p class="text-muted">Especialista en innovación</p>
                         <p class="text-muted">Desarrollador de soluciones</p>
                         <p class="text-muted">Docente de cátedra</p>
                             -->
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://elmundodelsoftwareblog.wordpress.com/" target="_blank"><i class="fa fa-wordpress"></i></a>
                             </li>
+                            <!-- 
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
+                                -->
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Ramírez</h4>
+                        <h4>Juan Santiago Posada</h4>
                         <p class="text-muted">Gerente Comercial</p>
+                        <p class="text-muted"><i>MBA, PMP</i></p>
                         <ul class="list-inline social-buttons">
+                            <!-- 
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
+                                -->
                         </ul>
                     </div>
                 </div>
