Assesment - Answer Question
Tests and Model

--- a/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Assesment/Execution.cshtml
@@ -38,7 +38,7 @@
 
             </header>
 
-            <h3 id="questionText" class="mark"></h3>
+            <h3 id="questionText" class=""></h3>
 
         </div>
 
