--- a/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
@@ -69,6 +69,10 @@
 
     <script>
 
+        function showMessage(message, type) {
+            alert(messsage);
+        }
+
         function ajaxPost(controller, method, data, fx) {
 
             $.ajax({
