--- a/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
+++ b/ProfessionalEvaluation.Website/Views/Shared/_AssesmentLayout.cshtml
@@ -70,7 +70,7 @@
     <script>
 
         function showMessage(message, type) {
-            alert(messsage);
+            alert(message);
         }
 
         function ajaxPost(controller, method, data, fx) {
